--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>user</module>
         <module>policy</module>
+        <module>message-service</module>
     </modules>
 
     <properties>
