implemented login logic

--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -19,6 +19,7 @@ spring:
 
 # kafka producer configs
   kafka:
+    enabled: false
     producer:
       bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
