--- a/message-service/src/main/resources/application.yml
+++ b/message-service/src/main/resources/application.yml
@@ -33,3 +33,6 @@ spring:
     value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
     auto-offset-reset: latest
     enable-auto-commit: false
+broadcast:
+  mail:
+    enabled: false
